# explorar

./: README.md
backend-python/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
backend-python/app/: main.py
backend-python/app/core/: common.py  config.py  exceptions.py  mongo.py
backend-python/app/features/categories/: __init__.py  router.py  schemas.py
backend-python/app/features/itinerary/: __init__.py  assigner.py  deps.py  prompt.py  router.py  schemas.py  service.py
backend-python/app/features/places/: __init__.py  documents.py  router.py  schemas.py  service.py
backend-python/app/features/routing/: __init__.py  deps.py  router.py  schemas.py  service.py
backend-python/app/integrations/fares/: __init__.py  data.py  macau.py  registry.py
backend-python/app/integrations/model/: __init__.py  client.py  contracts.py  strategies.py
backend-python/app/models/: const.py
backend-python/app/models/category/: api.py
backend-python/app/models/place/: __init__.py  api.py  db.py  shared.py
backend-python/app/models/route/: api.py  (+1 more)
backend-python/app/routes/: __init__.py  category.py  place.py  route.py
backend-python/app/utils/: geometry.py
backend-python/tests/: conftest.py  data.py
backend-python/tests/features/: test_categories_router.py  test_itinerary_assigner.py  test_itinerary_router.py  test_itinerary_service.py  test_places_router.py  test_routing_router.py  test_routing_service.py
backend-python/tests/integrations/: test_fares_data.py  test_fares_macau.py  test_model_client.py  test_model_strategies.py
(+148 files in other folders)
